--- a/app/views/pages/termos-de-uso.html.erb
+++ b/app/views/pages/termos-de-uso.html.erb
@@ -19,10 +19,8 @@
 
         <div class="page-text margin-large-bottom text-left">
           <p>
-            O presente documento tem por objeto estabelecer as Condições Gerais de Uso do site trampos.co na Internet pertencente a Trampos.co Tecnologia Ltda (adiante denominada trampos.co), com sede fiscal à Rua General Jardim, 618 - sala 12 - Vila Buarque - CEP: 01223-010 - São Paulo - SP e inscrita no CNPJ sob o número 18.605.358/0001-03.
-          </p>
-          <p>
-            A finalidade do trampos.co é a de disponibilizar uma plataforma que permite o encontro entre empresas e candidatos em um ambiente online. Nesse sentido, permite às empresas registradas o acesso à base de dados de candidatos registrados no site, a publicação de vagas de emprego, a inclusão do CV por parte do candidato através do menu privado e outros serviços relacionados com o setor do emprego.
+            O presente documento tem por objeto estabelecer as Condições Gerais de Uso do site Nova Currículos na Internet pertencente a Nova Currículos (adiante denominada NC).
+            Nossa empresa tem como foco facilitar o contato entre o contratante e o candidato, ou seja, objetivamos e intermediaremos, por meio de nosso website www.novacurriculos.com.br, o primeiro contato entre o recrutador e o candidato, utilizando para isso a divulgação das vagas para os futuros candidatos que se cadastrarão em nosso serviços. Toda o processo de contratação será feita pelo contratante, sendo que, apenas divulgaremos as vagas e notificaremos o contratante caso haja o interesse de algum candidato pela vaga. Essas notificações ocorrerão por email ou na área do contratante em nosso website.
           </p>
           <p>
             O site se reserva o direito de modificar sem prévio aviso as presentes Condições Gerais de Uso com o objetivo de adequá-las à legislação vigente aplicável em cada momento, às novidades jurisprudenciais e às práticas habituais do mercado.
@@ -35,26 +33,49 @@
         <div class="page-slogan">
           <div class="page-slogan-text">
             <p>
-              Condições legais para candidatos
+              CONDIÇÕES LEGAIS PARA CANDIDATOS
             </p>
           </div>
         </div>
 
         <div class="page-text margin-large-bottom text-left">
           <p>
-            O presente documento tem por objeto estabelecer as Condições Gerais de Uso do site trampos.co na Internet pertencente a Trampos.co Tecnologia Ltda (adiante denominada trampos.co), com sede fiscal à Rua General Jardim, 618 - sala 12 - Vila Buarque - CEP: 01223-010 - São Paulo - SP e inscrita no CNPJ sob o número 18.605.358/0001-03.
+          O site entende por Candidatos, os usuários pessoas físicas que buscam emprego, que utilizem os serviços do NC e acesse o site do qual é titular, Nova Currículos.
+          </p><p>
+          Nesse sentido, o site tem como objetivo disponibilizar ao candidato o acesso a vagas de emprego e às empresas o acesso ao CV dos candidatos registrados no NC.
+          </p><p>
+          O site se encontra em contínua evolução e desenvolvimento de novas ferramentas que acrescentem valor agregado ao candidato e à empresa registrada no NC.
+          </p><p>
+          A utilização por parte do Usuário de qualquer dos Serviços do site supõe e expressa sua adesão e aceitação expressa a todas as Condições Gerais de Uso na versão publicada no presente site no momento em que o usuário acesse o NC, assim como as Condições Particulares que, em seu caso, sejam aplicadas.
+          </p><p>
+          A utilização de certos serviços oferecidos aos Candidatos através do site, podem encontrar-se sujeitos a condições particulares próprias que, segundo os casos substituem, completam e/ou modificam as presentes Condições Legais. Portanto, antes da utilização dos referidos serviços, o Candidato também deve ler atentamente e aceitar inclusive as correspondentes Condições Particulares próprias.
           </p>
-          <p>
-            A finalidade do trampos.co é a de disponibilizar uma plataforma que permite o encontro entre empresas e candidatos em um ambiente online. Nesse sentido, permite às empresas registradas o acesso à base de dados de candidatos registrados no site, a publicação de vagas de emprego, a inclusão do CV por parte do candidato através do menu privado e outros serviços relacionados com o setor do emprego.
-          </p>
-          <p>
-            O site se reserva o direito de modificar sem prévio aviso as presentes Condições Gerais de Uso com o objetivo de adequá-las à legislação vigente aplicável em cada momento, às novidades jurisprudenciais e às práticas habituais do mercado.
-          </p>
-          <p>
-            Os criadores e colaboradores do site poderão a seu exclusivo critério e em qualquer tempo, modificar ou desativar o site, bem como limitar, cancelar ou suspender seu uso ou o acesso. Também estes Termos de Uso poderão ser alterados a qualquer tempo. Visite regularmente esta página e consulte os Termos então vigentes. Algumas disposições destes Termos podem ser substituídas por termos ou avisos legais expressos localizados em determinadas páginas deste site.
-          </p>
-        </div
+        </div>
 
+        <div class="page-slogan">
+          <div class="page-slogan-text">
+            <p>
+              Responsabilidades
+            </p>
+          </div>
+        </div>
+
+        <div class="page-text margin-large-bottom text-left">
+          <p>
+          O site apenas e tão somente responde pelos serviços próprios e conteúdos diretamente originados por ele mesmo.
+          </p><p>
+          O site não se responsabiliza nem respalda em nenhum caso, os produtos ou serviços prestados ou ofertados pelo cliente ou por terceiras pessoas ou entidades por meio de se seus serviços, tampouco por conteúdo, informação, comunicação, opinião ou manifestação de qualquer tipo que tenha o cliente ou terceiras pessoas ou entidades e que comuniquem, transmitam ou exponham através de nossos serviços.
+          </p><p>
+          O site poderá eliminar conteúdos ilegais ou supostamente ilegais sem prévio aviso.
+          </p><p>
+          O candidato reconhece que tecnicamente não é possível obter uma disponibilidade do site a 100% (cem por cento). Entretanto o site se esforçará para manter disponível o NC da forma mais constante possível. Especialmente por razões de manutenção, segurança ou capacidade, bem como, em razão de acontecimentos sobre os quais não possa interferir o site (por exemplo: anomalias de redes públicas de comunicação, cortes de eletricidade, etc.), podem produzir breves anomalidade ou a suspensão passageira dos serviços do NC.
+          </p>
+        </div>
+        <br />
+        <br />
+        <div class="page-text margin-large-bottom text-left">
+          <a href="https://docs.google.com/document/d/1NX9fK4-_TFAvEdg9uTGhIWzssIbqnlkKcCIukfI76IM/edit?usp=sharing">Termo completo</a>
+        </div>
       </div>
     </section>
   </div>
